--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.5 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,26 +31,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flutter_svg: ^1.1.6
+  word_search: ^0.1.2
+  percent_indicator: ^4.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  shared_preferences: ^2.0.15
-  getwidget: ^3.0.1
-  percent_indicator: ^3.4.0
-  auto_size_text: ^3.0.0
-  syncfusion_flutter_charts: ^20.4.41
-  charts_flutter: ^0.12.0
-  pie_chart: ^5.3.2
-
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,28 +63,19 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/google.jfif
-    - assets/Profile.jfif
+
     - assets/caracter1.png
     - assets/caracter2.png
     - assets/caracter3.png
     - assets/caracter4.png
-    - assets/caracter5.png
-    - assets/caracter6.png
-    - assets/caracter7.png
-    - assets/caracter8.png
-    - assets/Security.png
-    - assets/Ai.png
-    - assets/Hardware.png
-    - assets/Software.png
-    - assets/Internet.png
-    - assets/Design.png
+    - assets/Rectangle 7.png
+    - assets/profile.png
+    - assets/hardware.png
+    - assets/software.png
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -104,15 +88,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: poppindBold
+      fonts:
+        - asset: fonts/Poppins-Bold.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
