--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.18.5 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -51,6 +52,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_svg: ^1.1.6
+  word_search: ^0.1.2
+  percent_indicator: ^4.2.2
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -87,6 +92,8 @@ flutter:
     - assets/Software.png
     - assets/Internet.png
     - assets/Design.png
+    - assets/profile.png
+    - assets/Rectangle 7.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -105,6 +112,12 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+      - family: poppins
+      fonts:
+        - asset: fonts/Poppins-Regular.ttf
+      - family: poppindBold
+      fonts:
+        - asset: fonts/Poppins-Bold.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
