--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,10 @@ dependencies:
   syncfusion_flutter_charts: ^20.4.41
   charts_flutter: ^0.12.0
   pie_chart: ^5.3.2
-
+  socket_io_client: ^2.0.0
+  uuid: ^3.0.6
+  intl: ^0.17.0
+  mongo_dart: ^0.8.2
 
 
 dev_dependencies:
