--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   intl: ^0.17.0
   mongo_dart: ^0.8.2
   provider: ^6.0.5
+  file_picker: ^5.2.5
+  cloudinary_public: ^0.20.0
 
 
 dev_dependencies:
